--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -1,5 +1,13 @@
-$color-white: #ffffff;
+$color-white: #FFFFFF;
 $color-black: #000000;
-
+$color-bg: #EFEFEF;
+$light-blue: #D7DCFF;
+$base-blue: #3257FB;
+$blue-2: #1638CC;
+$light-grey: #C4C4C4;
+$light-grey-2: #8A8E97;
+$color-grey: #6A6E74;
 
 $primary-font: 'Rubik', sans-serif;
+$base-font-size: 16px;
+$base-font-color: #292D32;
